# POP

./: .gitignore  CMakeLists.txt  Makefile  generator.py  graph_generator.py  graph_generator_multithread.py  graphgen.cpp  info_o_grafach.txt  main.py  result.txt
examples/1/: data.txt
examples/1/tests/: result_2.txt
examples/10/: data.txt
examples/10/tests/: result_1.txt
examples/11/: data.txt
examples/11/tests/: result_1.txt  result_2.txt  result_3.txt
examples/12/: data.txt
examples/12/tests/: result_1.txt  result_2.txt  result_3.txt  result_4.txt  result_5.txt  result_6.txt  test_6.txt
examples/13/: data.txt
examples/13/tests/: result_1.txt  result_2.txt
examples/14/: data.txt
examples/14/tests/: result_1.txt
examples/15/: data.txt
examples/15/tests/: result_1.txt
examples/16/: data.txt
examples/16/tests/: result_1.txt
examples/17/: data.txt
examples/17/tests/: result_1.txt
examples/18/: data.txt
examples/18/tests/: result_1.txt
examples/19/: data.txt
examples/19/tests/: result_1.txt
examples/2/: data.txt
examples/2/tests/: result_1.txt  result_2.txt  result_3.txt  result_4.txt  result_5.txt
examples/20/: data.txt
examples/20/tests/: result_1.txt
examples/21/: data.txt
examples/21/tests/: result_1.txt
examples/22/: data.txt
examples/22/tests/: result_1.txt
examples/23/: data.txt
examples/23/tests/: result_1.txt  test_1.txt
examples/24/: data.txt
examples/24/tests/: result_1.txt  test_1.txt
examples/25/: data.txt
examples/25/tests/: result_1.txt  test_1.txt
examples/26/: data.txt
examples/26/tests/: result_1.txt  test_1.txt
examples/27/: data.txt
examples/27/tests/: result_1.txt  test_1.txt
examples/28/: data.txt
examples/28/tests/: result_1.txt  test_1.txt
examples/29/: data.txt
examples/29/tests/: result_1.txt  test_1.txt
examples/3/: data.txt
examples/3/tests/: result_1.txt  result_2.txt  result_3.txt
examples/4/: data.txt
examples/4/tests/: result_1.txt  result_2.txt
examples/5/: data.txt
examples/5/tests/: result_1.txt
examples/6/: data.txt
examples/6/tests/: result_1.txt
examples/7/: data.txt
examples/7/tests/: result_1.txt  test_1.txt
examples/8/: data.txt
examples/9/: data.txt
src/: CMakeLists.txt  Makefile  a_star.cpp  brut.cpp  dijkstra.cpp  experiments.cpp  io.cpp  main.cpp
src/include/: a_star.h  brut.h  dijkstra.h  io.h
tests/: CMakeLists.txt  Makefile  test_example_1.cpp  test_example_10.cpp  test_example_11.cpp  test_example_12.cpp  test_example_13.cpp  test_example_14.cpp  test_example_15.cpp  test_example_16.cpp  test_example_17.cpp  test_example_18.cpp  test_example_19.cpp  test_example_2.cpp  test_example_20.cpp  test_example_21.cpp  test_example_22.cpp  test_example_3.cpp  test_example_4.cpp  test_example_5.cpp  test_example_6.cpp  test_example_7.cpp  test_example_8.cpp  test_example_9.cpp
(+2 files in other folders)
